--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -74,7 +74,7 @@ div.row{
 }
 p{
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: large;
+  font-size: 30px;
   padding: 20px 10px;
   text-align: left;
   color: rgb(236, 14, 14);
